--- a/data/parsing/parse_t1_synthetic.ipynb
+++ b/data/parsing/parse_t1_synthetic.ipynb
@@ -273,7 +273,7 @@
     "                plot.axs[idx_row, idx_col].legend()\n",
     "\n",
     "    plot.export(path_dataset / \"plots\" / \"_noise_analysis.png\")\n",
-    "    plt.show()\n",
+    "    plt.close()\n",
     "\n",
     "    for idx_z in tqdm(range(mask.shape[0]), desc=\"saving dataset\"):\n",
     "        np.savez(\n",
@@ -300,6 +300,13 @@
     "            estimated_noise_std=sigma_per_slice_mean[idx_z],  # used for training (\\ell)\n",
     "        )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
