--- a/data/parsing/parse_t1_synthetic.ipynb
+++ b/data/parsing/parse_t1_synthetic.ipynb
@@ -76,7 +76,7 @@
     "        noise_std=0.02,\n",
     "        init_guess=[8, 4],\n",
     "        bounds=((0, 0), (100, 6)),\n",
-    "        mask_bound=0.0,\n",
+    "        mask_bound=0.3,\n",
     "    )\n",
     "    dp = path_data_raw / \"brainweb\" / params[\"pat_name\"]\n",
     "\n",
@@ -311,7 +311,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DIPPM",
+   "display_name": "testenv",
    "language": "python",
    "name": "python3"
   },
