--- a/eval_results/plot_results_vs_references.ipynb
+++ b/eval_results/plot_results_vs_references.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_data_storage = path_to_nb.parent / 'data' / \"data_parsed\"/ \"T1_VFA\"\n",
+    "path_data_storage = path_to_nb.parent / \"data\" / \"data_parsed\" / \"T1_VFA\"\n",
     "dataset_name = \"T1_VFA__Pat_04_shape_222_185_48_fa_2_4_11_13_15_noise_0.02\"\n",
     "idx_p = 1\n",
     "\n",
@@ -81,7 +81,7 @@
     "# create NLM reference\n",
     "y_est = []\n",
     "\n",
-    "for idx_z in tqdm(range(nz), desc='denoising with NLM'):\n",
+    "for idx_z in tqdm(range(nz), desc=\"denoising with NLM\"):\n",
     "    tmp = []\n",
     "    for idx_fa in range(y.shape[0]):\n",
     "        tmp.append(\n",
@@ -103,9 +103,9 @@
     "        B1_corr=data[i][\"b1_corr\"],\n",
     "        bounds=data[i][\"bounds\"],\n",
     "    )\n",
-    "    for i in tqdm(range(nz), desc='estimating parameter maps with NLLS')\n",
+    "    for i in tqdm(range(nz), desc=\"estimating parameter maps with NLLS\")\n",
     "]\n",
-    "p_NLM_nlls = np.asarray(p_NLM_nlls).swapaxes(0,1)\n",
+    "p_NLM_nlls = np.asarray(p_NLM_nlls).swapaxes(0, 1)\n",
     "\n",
     "ssim_NLM_nlls = [\n",
     "    masked_ssim(\n",
@@ -144,10 +144,13 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    y_est = []\n",
-    "    for idx_z in tqdm(range(nz), desc='denoising with BM3D'):\n",
+    "    for idx_z in tqdm(range(nz), desc=\"denoising with BM3D\"):\n",
     "        var = np.square(data[idx_z][\"noise_std\"])\n",
     "        est = np.stack(\n",
-    "            [main(y=y_ref[idx_fa, idx_z, :, :], noise_var=var) for idx_fa in range(y_ref.shape[0])]\n",
+    "            [\n",
+    "                main(y=y_ref[idx_fa, idx_z, :, :], noise_var=var)\n",
+    "                for idx_fa in range(y_ref.shape[0])\n",
+    "            ]\n",
     "        )\n",
     "        y_est.append(est)\n",
     "\n",
@@ -163,9 +166,9 @@
     "            B1_corr=data[idx_z][\"b1_corr\"],\n",
     "            bounds=data[idx_z][\"bounds\"],\n",
     "        )\n",
-    "        for idx_z in tqdm(range(nz), desc='estimating parameter maps with NLLS')\n",
+    "        for idx_z in tqdm(range(nz), desc=\"estimating parameter maps with NLLS\")\n",
     "    ]\n",
-    "    p_BM3D_nlls = np.asarray(p_BM3D_nlls).swapaxes(0,1)\n",
+    "    p_BM3D_nlls = np.asarray(p_BM3D_nlls).swapaxes(0, 1)\n",
     "\n",
     "ssim_BM3D_nlls = [\n",
     "    masked_ssim(\n",
@@ -194,11 +197,15 @@
    "outputs": [],
    "source": [
     "### AD PATH TO YOUR ESTIMATION HERE RESULTS\n",
-    "path_to_est = Path(r'E:\\paper3_local_storage\\TMP\\T1_VFA\\T1_VFA__Pat_04_shape_222_185_48_fa_2_4_11_13_15_noise_0.02\\250514154937')\n",
+    "path_to_est = Path(\n",
+    "    r\"E:\\paper3_local_storage\\TMP\\T1_VFA\\T1_VFA__Pat_04_shape_222_185_48_fa_2_4_11_13_15_noise_0.02\\250515110254\"\n",
+    ")\n",
     "\n",
     "\n",
-    "p_DIP_ours = [np.load(path_to_est / f'{idx_z:03d}' / \"p_est.npy\") for idx_z in range(nz)]\n",
-    "p_DIP_ours = np.asarray(p_DIP_ours).swapaxes(0,1)\n",
+    "p_DIP_ours = [\n",
+    "    np.load(path_to_est / f\"{idx_z:03d}\" / \"p_est.npy\") for idx_z in range(nz)\n",
+    "]\n",
+    "p_DIP_ours = np.asarray(p_DIP_ours).swapaxes(0, 1)\n",
     "\n",
     "ssim_DIP_ours = [\n",
     "    masked_ssim(\n",
@@ -217,8 +224,7 @@
     "        mask=mask[i, ...],\n",
     "    )\n",
     "    for i in range(nz)\n",
-    "]\n",
-    "\n"
+    "]\n"
    ]
   },
   {
@@ -232,20 +238,20 @@
     "\n",
     "ax = plot.axs[0, 0]\n",
     "\n",
-    "ax.plot(ssim_NONE_nlls, '.', color='C0', label='NONE')\n",
-    "ax.plot(ssim_NLM_nlls, '.', color='C1', label='NLM')\n",
-    "ax.plot(ssim_BM3D_nlls, '.', color='C2', label='BM3D')\n",
-    "ax.plot(ssim_DIP_ours, '+', color='C7', label='OURS')\n",
-    "ax.set(ylabel='SSIM')\n",
+    "ax.plot(ssim_NONE_nlls, \".\", color=\"C0\", label=\"NONE\")\n",
+    "ax.plot(ssim_NLM_nlls, \".\", color=\"C1\", label=\"NLM\")\n",
+    "ax.plot(ssim_BM3D_nlls, \".\", color=\"C2\", label=\"BM3D\")\n",
+    "ax.plot(ssim_DIP_ours, \"+\", color=\"C7\", label=\"OURS\")\n",
+    "ax.set(ylabel=\"SSIM\")\n",
     "ax.legend()\n",
     "\n",
     "ax = plot.axs[0, 1]\n",
     "\n",
-    "ax.plot(nrmse_NONE_nlls, '.', color='C0', label='NONE')\n",
-    "ax.plot(nrmse_NLM_nlls, '.', color='C1', label='NLM')\n",
-    "ax.plot(nrmse_BM3D_nlls, '.', color='C2', label='BM3D')\n",
-    "ax.plot(nrmse_DIP_ours, '+', color='C7', label='OURS')\n",
-    "ax.set(ylabel='NRMSE')\n",
+    "ax.plot(nrmse_NONE_nlls, \".\", color=\"C0\", label=\"NONE\")\n",
+    "ax.plot(nrmse_NLM_nlls, \".\", color=\"C1\", label=\"NLM\")\n",
+    "ax.plot(nrmse_BM3D_nlls, \".\", color=\"C2\", label=\"BM3D\")\n",
+    "ax.plot(nrmse_DIP_ours, \"+\", color=\"C7\", label=\"OURS\")\n",
+    "ax.set(ylabel=\"NRMSE\")\n",
     "ax.legend()\n",
     "\n",
     "plot.set_size(x=10, y=3)\n",
@@ -419,7 +425,7 @@
     "    borderpad=0,\n",
     "    ticks=(0, 2.5, 5),\n",
     ")\n",
-    "plot.cbar.remove_cols(cols=[2,4,5, 6])\n",
+    "plot.cbar.remove_cols(cols=[2, 4, 5, 6])\n",
     "plot.ticks.remove_all()\n",
     "\n",
     "plot.lines.remove_cols(cols=[0, 1])\n",
@@ -429,7 +435,7 @@
     "plot.set_size(4, 1.7)\n",
     "plot.set_spacing(wspace=0.05, hspace=0.05)\n",
     "\n",
-    "plot.export('results.png', dpi=2000)\n",
+    "plot.export(\"results.png\", dpi=2000)\n",
     "# plt.show()\n"
    ]
   },
